--- a/HashLibrary/HashLibrary.csproj
+++ b/HashLibrary/HashLibrary.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <Compile Remove="CoreClrShim.cs" />
+    <Compile Remove="Extensions\ImmutableArrayExtensions.cs" />
+    <Compile Remove="PooledObjects\PooledStringBuilder.cs" />
     <Compile Remove="ReflectionUtilities.cs" />
     <Compile Remove="RuntimeMetadataReferenceResolver.cs" />
   </ItemGroup>
