--- a/CSharpToVB/App.config
+++ b/CSharpToVB/App.config
@@ -10,9 +10,6 @@
     </startup>
     <userSettings>
         <CSharpToVBApp.My.MySettings>
-            <setting name="AutoCompile" serializeAs="String">
-                <value>True</value>
-            </setting>
             <setting name="ColorizeInput" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -23,10 +20,10 @@
                 <value>0</value>
             </setting>
             <setting name="DefaultProjectDirectory" serializeAs="String">
-                <value>C:\Users\PaulM\Source\Repos</value>
+                <value></value>
             </setting>
             <setting name="LastPath" serializeAs="String">
-                <value>C:\Users\PaulM\Source\Repos</value>
+                <value></value>
             </setting>
             <setting name="PauseConvertOnSuccess" serializeAs="String">
                 <value>False</value>
