--- a/HashLibrary/HashLibrary.csproj
+++ b/HashLibrary/HashLibrary.csproj
@@ -1,28 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="CoreClrShim.cs" />
-    <Compile Remove="Extensions\ImmutableArrayExtensions.cs" />
-    <Compile Remove="PooledObjects\PooledStringBuilder.cs" />
-    <Compile Remove="ReflectionUtilities.cs" />
-    <Compile Remove="RuntimeMetadataReferenceResolver.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
-  </ItemGroup>
 
 </Project>
