--- a/VBMsgBox/VBMsgBox.vbproj
+++ b/VBMsgBox/VBMsgBox.vbproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <RootNamespace>VBMsgBox</RootNamespace>
@@ -8,12 +8,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>VB MessageBox for .NET Core 3.0</Description>
     <PackageTags>Visual Basic MsgBox</PackageTags>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Windows.Forms">
-      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\3.0.0-preview6-27804-01\ref\netcoreapp3.0\System.Windows.Forms.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+    <UseWindowsForms>true</UseWindowsForms>
+</PropertyGroup>
 
 </Project>
