Fix compatibility issues with latest Roslyn and C# 8 features. Make renaming of Types less likely.

--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <LangVersion>16</LangVersion>
+    <OptionExplicit>On</OptionExplicit>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.0" />
