--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -12,7 +12,10 @@
     <OptionExplicit>On</OptionExplicit>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.1" />
+    <Compile Remove="Extensions\SyntaxFactsExtensions.vb" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.3.0-beta2-final" />
     <PackageReference Include="VBMsgBox" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
