--- a/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
+++ b/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <RootNamespace></RootNamespace>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
+    <UseWindowsForms>true</UseWindowsForms>
     <IsPackable>false</IsPackable>
     <LangVersion>16</LangVersion>
     <NeutralLanguage>en-US</NeutralLanguage>
