--- a/ManageProgressBar/ManageProgressBar.vbproj
+++ b/ManageProgressBar/ManageProgressBar.vbproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.6.0-preview9.19421.4" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
