--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -32,6 +32,7 @@
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="CLSIDGuid.vb" />
     <Compile Remove="OpenFolderDialog.vb" />
     <Compile Remove="Settings.vb" />
   </ItemGroup>
