Fully implement splash screen in a core compatible way, add image to splash screen and make text clearer. Under Core 5 all the special code I added will disappear but will need to be removed before 5.1.

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -22,7 +22,8 @@
     <OptionStrict>On</OptionStrict>
     <Version>3.1.2.0</Version>
     <Product>CSharp To VB Converter</Product>
-    <Copyright>Copyright ©  2020</Copyright>
+    <Copyright>Copyright © 2020</Copyright>
+    <PackageId>CSharp To VB Converter</PackageId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn />
