--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,11 @@
 ###############################
 # All files
 [*]
+end_of_line = crlf
 indent_style = space
+[*.xml]
+indent_style = space
+
 # Code files
 [*.{cs,csx,vb,vbx}]
 indent_size = 4
@@ -45,9 +49,6 @@ dotnet_style_prefer_conditional_expression_over_return = true:suggestion
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
 
-# CSharp and Visual Basic code quality settings:
-[*.{cs,vb}]
-dotnet_code_quality_unused_parameters = all:suggestion
 ###############################
 # Naming Conventions          #
 ###############################
@@ -87,19 +88,17 @@ dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
 ###############################
 # C# Coding Conventions       #
 ###############################
-[*.cs]
 # var preferences
-csharp_style_var_for_built_in_types = true:suggestion
-csharp_style_var_when_type_is_apparent = true:suggestion
-csharp_style_var_elsewhere = true:suggestion
-# Expression-bodied members
+#csharp_style_var_for_built_in_types = false:suggestion
+#csharp_style_var_when_type_is_apparent = false:suggestion
+#csharp_style_var_elsewhere = false:suggestion
+## Expression-bodied members
 csharp_style_expression_bodied_methods = false:silent
 csharp_style_expression_bodied_constructors = false:silent
 csharp_style_expression_bodied_operators = false:silent
 csharp_style_expression_bodied_properties = true:suggestion
 csharp_style_expression_bodied_indexers = true:suggestion
 csharp_style_expression_bodied_accessors = true:suggestion
-csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
 # Pattern matching preferences
 csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
