--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -20,9 +20,9 @@
     <ApplicationIcon>Icons\CStoVB.ico</ApplicationIcon>
     <OptionInfer>Off</OptionInfer>
     <OptionStrict>On</OptionStrict>
-    <Version>3.1.2.0</Version>
+    <Version>3.1.3.0</Version>
     <Product>CSharp To VB Converter</Product>
-    <Copyright>Copyright © 2020</Copyright>
+    <Copyright>Copyright © 2020 Travel By Paul</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
