--- a/CSharpToVB/My Project/Settings.settings
+++ b/CSharpToVB/My Project/Settings.settings
@@ -51,11 +51,20 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="BoilerPlateHeader" Type="System.String" Scope="User">
-      <Value Profile="(Default)">public void Main()
-        {</Value>
+      <Value Profile="(Default)">namespace ConsoleApp1
+{
+    class Program
+    {
+        static void Main(string[] args)
+        {
+</Value>
     </Setting>
     <Setting Name="BoilderPlateFooter" Type="System.String" Scope="User">
-      <Value Profile="(Default)">         }</Value>
+      <Value Profile="(Default)">        }
+    }
+}
+
+</Value>
     </Setting>
   </Settings>
 </SettingsFile>
